--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<script src="https://cdn.jsdelivr.net/npm/nodemailer@6.9.16/lib/nodemailer.min.js"></script>
+
 <script>
   const nodemailer = require("nodemailer");
 
@@ -16,7 +18,7 @@ async function main() {
   // send mail with defined transport object
   const info = await transporter.sendMail({
     from: '"Catalina Simonis" <catalina.simonis38@ethereal.email>', // sender address
-    to: "bar@example.com, baz@example.com", // list of receivers
+    to: "yukasky0319@gmail.com", // list of receivers
     subject: "Hello ✔", // Subject line
     text: "Hello world?", // plain text body
     html: "<b>Hello world?</b>", // html body
